<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MeChat</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="login_hint_username">帐号：</string>
    <string name="login_hint_password">密码：</string>
    <string name="login_login">登 录</string>
    <string name="login_register">注 册</string>
    
    <string name="register_hint_username">请输入您要注册的帐号名：</string>
    <string name="register_hint_pwd">请输入您的密码：</string>
    <string name="register_hint_2pwd">请再次输入您的密码：</string>
    <string name="register_register">立即注册</string>
    <string name="register_rule">请注意：用户名长度为3–20个字符，密码长度为3–20个字符，均不为空。</string>
    
    <string name="chat_send">发送</string>
    
    <string name="menu_friend">显示好友</string>
    <string name="menu_search">搜索/添加</string>
    
</resources>
