<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/login_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="5dp"
        android:hint="@string/login_hint_username"
        android:singleLine="true"
        fontawesometext:be_roundedCorners="true" >

        <requestFocus />
    </com.beardedhen.androidbootstrap.BootstrapEditText>

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/login_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_username"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:hint="@string/login_hint_password"
        android:inputType="textPassword"
        android:singleLine="true"
        fontawesometext:be_roundedCorners="true" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/login_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_password"
        android:layout_alignRight="@+id/login_password"
        android:layout_below="@+id/login_password"
        android:onClick="loginClick"
        android:text="@string/login_login"
        bootstrapbutton:bb_roundedCorners="true"
        bootstrapbutton:bb_size="small"
        bootstrapbutton:bb_type="info" >
    </com.beardedhen.androidbootstrap.BootstrapButton>

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="5dp"
        android:onClick="registerClick"
        android:text="@string/login_register"
        fontawesometext:bb_roundedCorners="true" >
    </com.beardedhen.androidbootstrap.BootstrapButton>

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="111dp"
        android:layout_height="111dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_logo"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>